Add my generators, remove all others

--- a/index.html
+++ b/index.html
@@ -2,20 +2,8 @@
 <html lang="en">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-S982VZS08T"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-S982VZS08T', {
-			send_page_view: false,
-			theme: localStorage.getItem('theme') || 'default',
-			version: localStorage.getItem('schema_version') || '1.21.9',
-			locale: localStorage.getItem('language') || 'en',
-			prefers_color_scheme: matchMedia('(prefers-color-scheme: light)').matches ? 'light' : matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'none',
-			tree_view_mode: localStorage.getItem('misode_tree_view_mode') || 'default',
-			colormap: localStorage.getItem('misode_colormap') || 'default',
-		});
+		function gtag() {}
 	</script>
 	<!-- End: Global site tag (gtag.js) - Google Analytics -->
 	<script>
@@ -31,7 +19,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Data Pack Generators - Minecraft 1.19, 1.20, 1.21</title>
 	<link rel="icon" href="/src/favicon-32.png" sizes="32x32">
-	<script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
 	<script>
 		if (typeof BigInt !== 'function') {
 			BigInt = function(e) { return e }
@@ -42,7 +29,6 @@
 	</script>
 </head>
 <body>
-	<div data-ea-publisher="misode-github-io" data-ea-manual="true" id="ad-placeholder"></div>
 	<script src="./src/app/Main.tsx" type="module"></script>
 </body>
 </html>
